// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PhoneNumberInput should render correctly 1`] = `
<div
  class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-text-field__slot"
      >
        <input
          id="input-3"
          type="text"
        />
      </div>
      <div
        class="v-input__append-inner"
      >
        <!---->
         
        <!---->
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light"
      >
        <span
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`PhoneNumberInput should restore saved value 1`] = `
<div
  class="v-input v-input--is-label-active v-input--is-dirty v-input--is-focused theme--light v-text-field primary--text"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-text-field__slot"
      >
        <input
          id="input-41"
          type="text"
        />
      </div>
      <div
        class="v-input__append-inner"
      >
        <!---->
         
        <!---->
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light primary--text"
      >
        <span
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`PhoneNumberInput should save value 1`] = `
<div
  class="v-input v-input--is-label-active v-input--is-dirty v-input--is-focused theme--light v-text-field primary--text"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-text-field__slot"
      >
        <input
          id="input-49"
          type="text"
        />
      </div>
      <div
        class="v-input__append-inner"
      >
        <!---->
         
        <!---->
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light primary--text"
      >
        <span
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`PhoneNumberInput should show country code prefix hint 1`] = `
<div
  class="v-input v-input--is-label-active v-input--is-dirty v-input--is-focused theme--light v-text-field primary--text"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-text-field__slot"
      >
        <input
          id="input-9"
          type="text"
        />
      </div>
      <div
        class="v-input__append-inner"
      >
        <!---->
         
        <!---->
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light"
      >
        <span
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        >
          <div
            class="v-messages__message"
          >
            It is recommended to add a country prefix, e.g. +49.
          </div>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`PhoneNumberInput should show country code prefix hint 2`] = `
<div
  class="v-input v-input--is-label-active v-input--is-dirty v-input--is-focused theme--light v-text-field primary--text"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-text-field__slot"
      >
        <input
          id="input-9"
          type="text"
        />
      </div>
      <div
        class="v-input__append-inner"
      >
        <i
          class="v-icon notranslate v-icon--link material-icons theme--light"
          role="button"
        >
          clear
        </i>
         
        <i
          class="v-icon notranslate v-icon--link material-icons theme--light"
          role="button"
        >
          save
        </i>
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light primary--text"
      >
        <span
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`PhoneNumberInput should show error and hide save button 1`] = `
<div
  class="v-input v-input--has-state v-input--is-label-active v-input--is-dirty theme--light v-text-field error--text"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-text-field__slot"
      >
        <input
          id="input-33"
          type="text"
        />
      </div>
      <div
        class="v-input__append-inner"
      >
        <i
          class="v-icon notranslate v-icon--link material-icons theme--light"
          role="button"
        >
          clear
        </i>
         
        <!---->
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light error--text"
      >
        <span
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        >
          <div
            class="v-messages__message"
          >
            Invalid phone number.
          </div>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`PhoneNumberInput should show save and restore button if changes are made 1`] = `
<div
  class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-text-field__slot"
      >
        <input
          id="input-17"
          type="text"
        />
      </div>
      <div
        class="v-input__append-inner"
      >
        <!---->
         
        <!---->
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light"
      >
        <span
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`PhoneNumberInput should show save and restore button if changes are made 2`] = `
<div
  class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-text-field__slot"
      >
        <input
          id="input-17"
          type="text"
        />
      </div>
      <div
        class="v-input__append-inner"
      >
        <i
          class="v-icon notranslate v-icon--link material-icons theme--light"
          role="button"
        >
          clear
        </i>
         
        <i
          class="v-icon notranslate v-icon--link material-icons theme--light"
          role="button"
        >
          save
        </i>
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light"
      >
        <span
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`PhoneNumberInput should show save and restore button if input is cleared 1`] = `
<div
  class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-text-field__slot"
      >
        <input
          id="input-25"
          type="text"
        />
      </div>
      <div
        class="v-input__append-inner"
      >
        <!---->
         
        <!---->
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light"
      >
        <span
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`PhoneNumberInput should show save and restore button if input is cleared 2`] = `
<div
  class="v-input theme--light v-text-field"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-text-field__slot"
      >
        <input
          id="input-25"
          type="text"
        />
      </div>
      <div
        class="v-input__append-inner"
      >
        <i
          class="v-icon notranslate v-icon--link material-icons theme--light"
          role="button"
        >
          clear
        </i>
         
        <i
          class="v-icon notranslate v-icon--link material-icons theme--light"
          role="button"
        >
          save
        </i>
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light"
      >
        <span
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</div>
`;
